# rtx-on-rs

./: Cargo.toml  README.md
math/: Cargo.toml
raytracing/: Cargo.toml
raytracing/src/: acceleration_structure.rs  geometry_instance.rs  lib.rs
rtx-on-rs/: Cargo.toml
rtx-on-rs/src/: base.rs  camera.rs  config.rs  lib.rs  main.rs
shaders/shadows/: closesthit.rchit  closesthit.rchit.spv  raygen.rgen  raygen.rgen.spv  shadowmiss.rmiss
shaders/triangle/: closesthit.rchit  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
vulkan/: Cargo.toml
vulkan/src/: buffer.rs  image.rs  lib.rs  swapchain.rs
vulkan/src/context/: mod.rs  shared.rs
