[package]
name = "raytracing"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkan = {path = "../vulkan"}
log = "0.4"
env_logger = "0.6"
ash = "0.29.0"