[package]
name = "rtx-on-rs"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkan = {path = "../vulkan"}
raytracing = {path = "../raytracing"}
math = {path = "../math"}

log = "0.4"
env_logger = "0.6"
ash = "0.29.0"
winit = "0.19.2"
cgmath = "0.17"
tobj = "0.1.10"